donate amount part done

--- a/index.html
+++ b/index.html
@@ -58,6 +58,51 @@
                 <button class="primary-btn"><a href="#">Donate Now</a></button>
             </div>
         </section>
+
+        <!-- donate plane section html start   -->
+        <section class="donate-plane">
+            <div class="donane-plane-header">
+                <div class="section-title">Our Donate Plan</div>
+                <div class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim
+                    </div>
+            </div>
+            <div class="donate-plane-content">
+                <div class="plane plane-1">
+                    <img src="icons/food.png" alt="">
+                    <h3 class="section-title">Food for a family</h3>
+                    <p class="section-description">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="plane plane-2">
+                    <img src="icons/shelter.png" alt="">
+                    <h3 class="section-title">Food for a family</h3>
+                    <p class="section-description">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="plane plane-3">
+                    <img src="icons/Frame-1.png" alt="">
+                    <h3 class="section-title">Food for a family</h3>
+                    <p class="section-description">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p> 
+                </div>
+            </div>
+        </section>
+
+        <!-- donate gallery section html start  -->
+        <section class="donate-gallery">
+            <div class="donate-gallery-content">
+                <h3 class="section-title">Their lives depend on your donation</h3>
+                <p class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                <p class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            </div>
+            <div class="donate-gallery-img"><img src="images/donation3.jpg" alt=""></div>
+        </section>
     </main>
 
 </body>
