donate gallery part done

--- a/index.html
+++ b/index.html
@@ -100,9 +100,23 @@
                 <h3 class="section-title">Their lives depend on your donation</h3>
                 <p class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
                 <p class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                <button class="primary-btn"><a href="#">How to Contribute?</a></button>
             </div>
-            <div class="donate-gallery-img"><img src="images/donation3.jpg" alt=""></div>
+                <img src="images/donation3.jpg" alt="">
         </section>
+        <section class="donate-gallery">
+            <img src="images/donation3.jpg" alt="">
+            <div class="donate-gallery-content">
+                
+                <h3 class="section-title">Their lives depend on your donation</h3>
+                <p class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                <p class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                <button class="primary-btn"><a href="#">How to Contribute?</a></button>
+            </div>    
+        </section>
+
+        <!-- newsletter section html start  -->
+        
     </main>
 
 </body>
