--- a/index.html
+++ b/index.html
@@ -116,7 +116,24 @@
         </section>
 
         <!-- newsletter section html start  -->
-        
+        <section class="newsletter">
+            <div class="newsletter-content">
+                <h3 class="section-title">Get My Updates</h3>
+                <p class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+            <div class="newsletter-form">
+                <form>
+                <input type="email" name="" id="" placeholder="Email">
+                <input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </section>
+
+        <!-- footer section html start  -->
+        <footer>
+            <p class="copyrighter">Rashed Hasan</p>
+            <p class="copyright-text">All Copyright reserved by Rashed Hasan</p>
+        </footer>
     </main>
 
 </body>
